--- a/hort_parts/templates/hort_parts/main.html
+++ b/hort_parts/templates/hort_parts/main.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="{% static 'css/hort-mobile.css' %}">
 
 </head>
-<body id="body">
+<body class="vw5-frontend vw5-rootDomainAtMaster vw5-rootDomainAt__HomePage_Component">
 
 {% include 'hort_parts/include/header.html' %}
 
