--- a/hort_parts/templates/hort_parts/about.html
+++ b/hort_parts/templates/hort_parts/about.html
@@ -7,4 +7,47 @@
 
 {% block content_page %}
 
+<div class="site-about">
+
+    <div class="col-lg-13">
+        <p>
+            <b><?= Yii::t('about','Trademark "HORT"') ?></b>,
+            <b><?= Yii::t('about','founded by the German company M-Tech Autoteile GmbH') ?></b>,
+            <?= Yii::t('about','appeared on the market of auto components in 2009, introducing cooling pumps for passenger cars.') ?>
+        </p>
+        <p> <?= Yii::t('about','At present') ?> <b><?= Yii::t('about','TM "HORT"') ?></b>
+            <?= Yii::t('about','offers to motorists and service specialists a significant list of spare parts, which include') ?>
+            :</p>
+        <ul>
+            <li class="site-about"><?= Yii::t('about','Shock absorbers') ?></li>
+            <li class="site-about"><?= Yii::t('about','Clutch elements') ?></li>
+            <li class="site-about"><?= Yii::t('about','Brake pads and cylinders') ?></li>
+            <li class="site-about"><?= Yii::t('about','Thermostats') ?></li>
+            <li class="site-about"><?= Yii::t('about','Cooling pumps') ?></li>
+            <li class="site-about"><?= Yii::t('about','Starters') ?></li>
+            <li class="site-about"><?= Yii::t('about','Generators') ?></li>
+            <li class="site-about"><?= Yii::t('about','High-voltage wires') ?></li>
+            <li class="site-about"><?= Yii::t('about','Timing belts') ?></li>
+            <li class="site-about"><?= Yii::t('about','Drive belts') ?></li>
+            <li class="site-about"><?= Yii::t('about','Gas stops') ?></li>
+            <li class="site-about"><?= Yii::t('about','Constantly done painstaking work to expand the range of products') ?></li>
+        </ul>
+        <p><b><?= Yii::t('about','TM "HORT"') ?></b>
+            <?= Yii::t('about','in the production of products uses the latest automated control systems for quality control and shipment of products in accordance with the requirements of') ?>
+            <b>
+                <?= Yii::t('about','ISO / TS 16949') ?></b>,
+            <?= Yii::t('about','which allows you to track all the stages of planning, preparation and operation of production, tooling, finished products.') ?>
+        </p>
+        <p> <?= Yii::t('about','This approach makes it possible to ensure the quality of') ?> <b>
+            <?= Yii::t('about','TM "HORT"') ?></b> <?= Yii::t('about','products and assume') ?>
+            <b><?= Yii::t('about','warranty obligations') ?></b>
+            <?= Yii::t('about','to the consumer for at least') ?> <b><?= Yii::t('about','12 months') ?>
+            </b> <?= Yii::t('about','of their operation.') ?> </p>
+        <p><b><?= Yii::t('about','TM "HORT"') ?></b>
+            <?= Yii::t('about','makes maximum efforts to promote quality auto components to the secondary market.') ?>
+        </p>
+    </div>
+
+</div>
+
 {% endblock content_page %}
