--- a/hort_parts/templates/hort_parts/news/news_detail.html
+++ b/hort_parts/templates/hort_parts/news/news_detail.html
@@ -7,4 +7,22 @@
 
 {% block news_page %}
 
+<div class="news-article">
+
+    <div class="container">
+        <div class="row my-4">
+            <div class="col-lg-5">
+                <img class="card-img-top" src="<?= $article->image ?>" alt="">
+            </div>
+            <div class="col-lg-7">
+                <h1><b>News</b></h1>
+                <br/>
+                <p>
+                <h3>News</h3></p>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 {% endblock news_page %}
