--- a/hort_parts/templates/hort_parts/news/news_list.html
+++ b/hort_parts/templates/hort_parts/news/news_list.html
@@ -7,4 +7,25 @@
 
 {% block news_page %}
 
+<div class="site-news">
+
+    <div class="container">
+        <div class="row my-4">
+            <div class="col-lg-5">
+                <img class="card-img-top" src="#" alt="">
+            </div>
+            <div class="col-lg-7">
+                <h1><b>News</b></h1>
+                <br/>
+                <p>
+                <h3>News</h3></p>
+                <br/>
+                <p>DETAILED</p>
+            </div>
+        </div>
+        <hr>
+    </div>
+
+</div>
+
 {% endblock news_page %}
