--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -21,10 +21,10 @@
                         </a>
                     </div>
 
-                </div> <!-- end col-twelve -->
-            </div> <!-- end row -->
-        </div> <!-- end home-content-tablecell -->
-    </div> <!-- end home-content-table -->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <ul class="home-social-list">
         <li class="animate-intro">
@@ -34,7 +34,7 @@
             <a href="#"><i class="fa fa-twitter"></i></a>
         </li>
         <li class="animate-intro">
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.instagram.com/hortparts/" target="_blank"><i class="fa fa-instagram"></i></a>
         </li>
         <li class="animate-intro">
             <a href="#"><i class="fa fa-behance"></i></a>
