--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -16,7 +16,7 @@
                 <div class="col-twelve">
 
                     <div class="more animate-intro">
-                        <a class="smoothscroll button stroke" href="#about">
+                        <a class="smoothscroll button stroke" href="#products">
                             Hort Products
                         </a>
                     </div>
@@ -54,9 +54,7 @@
 </section> <!-- end home -->
 
 
-<!-- about
-================================================== -->
-<section id="about">
+<section id="products">
 
     <div class="row about-wrap">
         <div class="col-full">
@@ -78,6 +76,26 @@
 
 <!-- about
 ================================================== -->
+<section id="about">
+
+    <div class="row about-wrap">
+        <div class="col-full">
+
+            <div class="about-profile-bg"></div>
+
+            <div class="intro">
+                <h3 class="animate-this">About US</h3>
+
+                <p class="lead animate-this"><span>Infinity</span> is a creative digital agency based in Manila,
+                    Philippines. We are composed of creative designers and experienced developers.</p>
+            </div>
+
+        </div> <!-- end col-full  -->
+    </div> <!-- end about-wrap  -->
+
+</section> <!-- end about -->
+
+
 <section id="services">
 
     <div class="overlay"></div>
