--- a/hort_parts/templates/hort_parts/include/footer.html
+++ b/hort_parts/templates/hort_parts/include/footer.html
@@ -1,6 +1,7 @@
 {% load static i18n hort_tag %}
 
 <footer>
+
     <div class="footer-main">
 
         <div class="row">
@@ -14,7 +15,7 @@
                     nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Proin eget
                     tortor risus.</p>
 
-            </div> <!-- end footer-about -->
+            </div>
 
             <div class="col-three tab-full footer-social">
 
@@ -28,7 +29,7 @@
                     <li><a href="#">Dribble</a></li>
                 </ul>
 
-            </div> <!-- end footer-social -->
+            </div>
 
             <div class="col-four tab-full footer-subscribe end">
 
@@ -52,11 +53,11 @@
 
                 </div>
 
-            </div> <!-- end footer-subscribe -->
+            </div>
 
-        </div> <!-- end row -->
+        </div>
 
-    </div> <!-- end footer-main -->
+    </div>
 
     <div class="footer-bottom">
 
@@ -72,11 +73,12 @@
 
         </div>
 
-    </div> <!-- end footer-bottom -->
+    </div>
 
     <div id="go-top">
         <a class="smoothscroll" title="Back to Top" href="#top">
             <i class="fa fa-long-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
+
 </footer>
