--- a/hort_parts/templates/hort_parts/include/header.html
+++ b/hort_parts/templates/hort_parts/include/header.html
@@ -19,9 +19,11 @@
 
         <ul class="nav-list">
             <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
+            <li><a class="smoothscroll" href="#products" title="">Products</a></li>
             <li><a class="smoothscroll" href="#about" title="">About</a></li>
-            <li><a class="smoothscroll" href="#services" title="">Services</a></li>
-            <li><a class="smoothscroll" href="#portfolio" title="">Works</a></li>
+            <li><a class="smoothscroll" href="#services" title="">Download materials</a></li>
+            <li><a class="smoothscroll" href="#portfolio" title="">News</a></li>
+            <li><a class="smoothscroll" href="#portfolio" title="">Warranty</a></li>
             <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
         </ul>
 
@@ -33,7 +35,7 @@
                 <a href="#"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/hortparts/" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-behance"></i></a>
