--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -42,17 +42,16 @@
         <li class="animate-intro">
             <a href="#"><i class="fa fa-dribbble"></i></a>
         </li>
-    </ul> <!-- end home-social-list -->
+    </ul>
 
     <div class="scrolldown">
-        <a href="#about" class="scroll-icon smoothscroll">
+        <a href="#products" class="scroll-icon smoothscroll">
             Scroll Down
             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
         </a>
     </div>
 
-</section> <!-- end home -->
-
+</section>
 
 <section id="products">
 
@@ -68,14 +67,11 @@
                     Philippines. We are composed of creative designers and experienced developers.</p>
             </div>
 
-        </div> <!-- end col-full  -->
-    </div> <!-- end about-wrap  -->
+        </div>
+    </div>
 
-</section> <!-- end about -->
+</section>
 
-
-<!-- about
-================================================== -->
 <section id="about">
 
     <div class="row about-wrap">
@@ -86,15 +82,41 @@
             <div class="intro">
                 <h3 class="animate-this">About US</h3>
 
-                <p class="lead animate-this"><span>Infinity</span> is a creative digital agency based in Manila,
-                    Philippines. We are composed of creative designers and experienced developers.</p>
+                <p class="lead animate-this"><span>Trademark "HORT"</span>
+                    , founded by the German company M-Tech Autoteile GmbH, appeared on the market of
+                    auto components in 2009, introducing cooling pumps for passenger cars.
+
+                    At present TM "HORT" offers to motorists and service specialists a significant list of spare parts,
+                    which include:
+
+                    Shock absorbers
+                    Clutch elements
+                    Brake pads and cylinders
+                    Thermostats
+                    Cooling pumps
+                    Starters
+                    Generators
+                    High-voltage wires
+                    Timing belts
+                    Drive belts
+                    Gas stops
+                    Constantly done painstaking work to expand the range of products
+                    TM "HORT" in the production of products uses the latest automated control systems for quality
+                    control and shipment of products in accordance with the requirements of ISO / TS 16949, which allows
+                    you to track all the stages of planning, preparation and operation of production, tooling, finished
+                    products.
+
+                    This approach makes it possible to ensure the quality of TM "HORT" products and assume warranty
+                    obligations to the consumer for at least 12 months of their operation.
+
+                    TM "HORT" makes maximum efforts to promote quality auto components to the secondary market.
+                </p>
             </div>
 
-        </div> <!-- end col-full  -->
-    </div> <!-- end about-wrap  -->
+        </div>
+    </div>
 
-</section> <!-- end about -->
-
+</section>
 
 <section id="services">
 
@@ -181,17 +203,14 @@
                     </p>
                 </div>
 
-            </div> <!-- end bgrid -->
+            </div>
 
-        </div> <!-- end services-list -->
+        </div>
 
-    </div> <!-- end services-content -->
+    </div>
 
-</section> <!-- end services -->
+</section>
 
-
-<!-- portfolio
-================================================== -->
 <section id="portfolio">
 
     <div class="intro-wrap">
@@ -355,17 +374,14 @@
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
                             nulla voluptate fugiat velit. <a href="www.behance.net">Details</a></p>
                     </div>
-                </div> <!-- end folio-item -->
+                </div>
 
-            </div> <!-- end folio-wrap -->
-        </div> <!-- end twelve -->
-    </div> <!-- end portfolio-content -->
+            </div>
+        </div>
+    </div>
 
-</section>  <!-- end portfolio -->
+</section>
 
-
-<!-- Testimonials Section
-================================================== -->
 <section id="testimonials">
 
     <div class="row">
@@ -413,13 +429,13 @@
                     </div>
                 </li> <!-- end slide -->
 
-            </ul> <!-- end slides -->
+            </ul>
 
-        </div> <!-- end testimonial-slider -->
+        </div>
 
-    </div> <!-- end flex-container -->
+    </div>
 
-</section> <!-- end testimonials -->
+</section>
 
 <section id="clients">
 
@@ -440,14 +456,11 @@
                 <div><img src="images/clients/wordpress.png" alt=""></div>
             </div>
 
-        </div> <!-- end col-twelve -->
-    </div> <!-- end row -->
+        </div>
+    </div>
 
-</section> <!-- end clients -->
+</section>
 
-
-<!-- contact
-================================================== -->
 <section id="contact">
 
     <div class="overlay"></div>
@@ -509,17 +522,15 @@
                     </div>
                 </div>
 
-            </form> <!-- end form -->
+            </form>
 
-            <!-- contact-warning -->
             <div id="message-warning"></div>
 
-            <!-- contact-success -->
             <div id="message-success">
                 <i class="fa fa-check"></i>Your message was sent, thank you!<br>
             </div>
 
-        </div> <!-- end col-seven -->
+        </div>
 
         <div class="col-four tab-full contact-info end animate-this">
 
@@ -551,11 +562,11 @@
                 </p>
             </div>
 
-        </div> <!-- end cinfo -->
+        </div>
 
-    </div> <!-- end row contact-content -->
+    </div>
 
-</section> <!-- end contact -->
+</section>
 
 <div id="preloader">
     <div id="loader"></div>
