--- a/hort_parts/static/css/main.css
+++ b/hort_parts/static/css/main.css
@@ -1562,11 +1562,12 @@ header .header-logo a {
   color: #FFFFFF;
 }
 .home-content-tablecell .more {
-  margin: 17rem 0 0 0;
+  margin: 25rem 0 0 0;
 }
 .home-content-tablecell .more .button {
-  border-color: #FFFFFF;
-  color: #FFFFFF;
+  border-color: #ff0000;
+  color: #ff0000;
+  font-size: 3rem;
 }
 
 /* home social-list */
@@ -1875,6 +1876,114 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     max-width: 380px;
   }
   #about .lead {
+    font-size: 2.3rem;
+  }
+}
+
+/* ===================================================================
+ *  11. products - (_layout.scss)
+ *
+ * ------------------------------------------------------------------- */
+#products {
+  position: relative;
+  padding: 4.2rem 0 12rem;
+  background-color: #FFFFFF;
+  min-height: 696px;
+  text-align: center;
+}
+#products .about-wrap {
+  max-width: 850px;
+}
+#products span {
+  color: #07617d;
+}
+#products h3 {
+  font-family: "montserrat-bold", sans-serif;
+  font-size: 1.8rem;
+  line-height: 1.667;
+  color: #07617d;
+  text-transform: uppercase;
+  letter-spacing: .3rem;
+  position: relative;
+}
+#products h3::before {
+  display: block;
+  content: "";
+  width: 3px;
+  height: 9.6rem;
+  background-color: rgba(149, 149, 149, 0.7);
+  margin: 0 auto 2.4rem;
+}
+#products .lead {
+  font-family: "librebaskerville-bold", serif;
+  font-size: 4rem;
+  line-height: 1.8;
+  color: #2e383f;
+  margin-top: 6rem;
+}
+
+/* -------------------------------------------------------------------
+ * responsive:
+ * products
+ * ------------------------------------------------------------------- */
+@media only screen and (max-width: 1024px) {
+  #products {
+    min-height: 636px;
+  }
+  #products .about-wrap {
+    max-width: 800px;
+  }
+  #products .lead {
+    font-size: 3.8rem;
+  }
+}
+@media only screen and (max-width: 900px) {
+  #products .about-wrap {
+    max-width: 720px;
+  }
+  #products .lead {
+    font-size: 3.6rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #products h3 {
+    font-size: 1.7rem;
+  }
+  #products .about-wrap {
+    max-width: 600px;
+  }
+  #products .lead {
+    font-size: 3.1rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  #products {
+    min-height: auto;
+  }
+  #products .about-wrap {
+    max-width: 500px;
+  }
+  #products .lead {
+    margin-top: 4.8rem;
+    font-size: 2.8rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  #products h3 {
+    font-size: 1.5rem;
+  }
+  #products .lead {
+    font-size: 2.5rem;
+  }
+}
+@media only screen and (max-width: 400px) {
+  #products {
+    padding: 4.2rem 0 9.6rem;
+  }
+  #products .about-wrap {
+    max-width: 380px;
+  }
+  #products .lead {
     font-size: 2.3rem;
   }
 }
