--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -46,7 +46,7 @@
 
     <div class="scrolldown">
         <a href="#products" class="scroll-icon smoothscroll">
-            Scroll Down
+            Hort Products
             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
         </a>
     </div>
@@ -126,13 +126,35 @@
     <div class="row narrow section-intro with-bottom-sep animate-this">
         <div class="col-full">
 
-            <h3>Services</h3>
-            <h1>What We Do.</h1>
+            <h3>Trademark HORT</h3>
+            <p class="lead">Trademark "HORT", founded by the German company M-Tech Autoteile GmbH, appeared on the market of
+                    auto components in 2009, introducing cooling pumps for passenger cars.
 
-            <p class="lead">Lorem ipsum Elit ut consequat veniam eu nulla nulla reprehenderit reprehenderit sit velit in
-                cupidatat ex aliquip ut cupidatat Excepteur tempor id irure sed dolore sint sunt voluptate ullamco nulla
-                qui Duis qui culpa voluptate enim ea aute qui veniam in irure et nisi nostrud deserunt est officia
-                minim.</p>
+                    At present TM "HORT" offers to motorists and service specialists a significant list of spare parts,
+                    which include:
+
+                    Shock absorbers
+                    Clutch elements
+                    Brake pads and cylinders
+                    Thermostats
+                    Cooling pumps
+                    Starters
+                    Generators
+                    High-voltage wires
+                    Timing belts
+                    Drive belts
+                    Gas stops
+                    Constantly done painstaking work to expand the range of products
+                    TM "HORT" in the production of products uses the latest automated control systems for quality
+                    control and shipment of products in accordance with the requirements of ISO / TS 16949, which allows
+                    you to track all the stages of planning, preparation and operation of production, tooling, finished
+                    products.
+
+                    This approach makes it possible to ensure the quality of TM "HORT" products and assume warranty
+                    obligations to the consumer for at least 12 months of their operation.
+
+                    TM "HORT" makes maximum efforts to promote quality auto components to the secondary market.
+            </p>
 
         </div> <!-- end col-full -->
     </div> <!-- end row -->
