--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -6,6 +6,55 @@
 
 {% block content_page %}
 
+<header>
+
+    <div class="header-logo">
+        <a href="index.html">Hort Parts</a>
+    </div>
+
+    <a id="header-menu-trigger" href="#0">
+        <span class="header-menu-text">Menu</span>
+        <span class="header-menu-icon"></span>
+    </a>
+
+    <nav id="menu-nav-wrap">
+
+        <a href="#0" class="close-button" title="close"><span>Close</span></a>
+
+        <h3>Hort Parts.</h3>
+
+        <ul class="nav-list">
+            <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
+            <li><a class="smoothscroll" href="#products" title="">Products</a></li>
+            <li><a class="smoothscroll" href="#about" title="">About</a></li>
+            <li><a class="smoothscroll" href="#services" title="">Download materials</a></li>
+            <li><a class="smoothscroll" href="#portfolio" title="">News</a></li>
+            <li><a class="smoothscroll" href="#portfolio" title="">Warranty</a></li>
+            <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
+        </ul>
+
+        <ul class="header-social-list">
+            <li>
+                <a href="#"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/hortparts/" target="_blank"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-behance"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-dribbble"></i></a>
+            </li>
+        </ul>
+
+    </nav>
+
+</header>
+
 <section id="home">
 
     <div class="overlay"></div>
@@ -27,9 +76,6 @@
     </div>
 
     <ul class="home-social-list">
-        <li class="animate-intro">
-            <a href="#"><i class="fa fa-facebook-square"></i></a>
-        </li>
         <li class="animate-intro">
             <a href="#"><i class="fa fa-twitter"></i></a>
         </li>
@@ -63,8 +109,10 @@
             <div class="intro">
                 <h3 class="animate-this">Products</h3>
 
-                <p class="lead animate-this"><span>Infinity</span> is a creative digital agency based in Manila,
-                    Philippines. We are composed of creative designers and experienced developers.</p>
+                <p class="lead animate-this">
+                    <span>Infinity</span> is a creative digital agency based in Manila,
+                    Philippines. We are composed of creative designers and experienced developers.
+                </p>
             </div>
 
         </div>
@@ -127,37 +175,38 @@
         <div class="col-full">
 
             <h3>Trademark HORT</h3>
-            <p class="lead">Trademark "HORT", founded by the German company M-Tech Autoteile GmbH, appeared on the market of
-                    auto components in 2009, introducing cooling pumps for passenger cars.
+            <p class="lead">Trademark "HORT", founded by the German company M-Tech Autoteile GmbH, appeared on the
+                market of
+                auto components in 2009, introducing cooling pumps for passenger cars.
 
-                    At present TM "HORT" offers to motorists and service specialists a significant list of spare parts,
-                    which include:
+                At present TM "HORT" offers to motorists and service specialists a significant list of spare parts,
+                which include:
 
-                    Shock absorbers
-                    Clutch elements
-                    Brake pads and cylinders
-                    Thermostats
-                    Cooling pumps
-                    Starters
-                    Generators
-                    High-voltage wires
-                    Timing belts
-                    Drive belts
-                    Gas stops
-                    Constantly done painstaking work to expand the range of products
-                    TM "HORT" in the production of products uses the latest automated control systems for quality
-                    control and shipment of products in accordance with the requirements of ISO / TS 16949, which allows
-                    you to track all the stages of planning, preparation and operation of production, tooling, finished
-                    products.
+                Shock absorbers
+                Clutch elements
+                Brake pads and cylinders
+                Thermostats
+                Cooling pumps
+                Starters
+                Generators
+                High-voltage wires
+                Timing belts
+                Drive belts
+                Gas stops
+                Constantly done painstaking work to expand the range of products
+                TM "HORT" in the production of products uses the latest automated control systems for quality
+                control and shipment of products in accordance with the requirements of ISO / TS 16949, which allows
+                you to track all the stages of planning, preparation and operation of production, tooling, finished
+                products.
 
-                    This approach makes it possible to ensure the quality of TM "HORT" products and assume warranty
-                    obligations to the consumer for at least 12 months of their operation.
+                This approach makes it possible to ensure the quality of TM "HORT" products and assume warranty
+                obligations to the consumer for at least 12 months of their operation.
 
-                    TM "HORT" makes maximum efforts to promote quality auto components to the secondary market.
+                TM "HORT" makes maximum efforts to promote quality auto components to the secondary market.
             </p>
 
-        </div> <!-- end col-full -->
-    </div> <!-- end row -->
+        </div>
+    </div>
 
     <div class="row services-content">
 
@@ -177,7 +226,7 @@
                     </p>
                 </div>
 
-            </div> <!-- end bgrid -->
+            </div>
 
             <div class="bgrid service-item animate-this">
 
@@ -193,7 +242,7 @@
                     </p>
                 </div>
 
-            </div> <!-- end bgrid -->
+            </div>
 
             <div class="bgrid service-item animate-this">
 
@@ -209,7 +258,7 @@
                     </p>
                 </div>
 
-            </div> <!-- end bgrid -->
+            </div>
 
             <div class="bgrid service-item animate-this">
 
@@ -246,9 +295,9 @@
                     esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut
                     laborum non est in officia.</p>
             </div>
-        </div> <!-- end row section-intro -->
+        </div>
 
-    </div> <!-- end intro-wrap -->
+    </div>
 
     <div class="row portfolio-content">
         <div class="col-twelve">
@@ -266,17 +315,17 @@
                                 <h3 class="folio-title">Shutterbug</h3>
                             </div>
                         </a>
-                        <a href="https://www.behance.net/" class='details-link' title="details">
+                        <a href="#" class='details-link' title="details">
                             <i class="icon-link"></i>
                         </a>
-                    </div> <!-- end item-wrap -->
+                    </div>
 
                     <div id="01" class='hide'>
                         <h4>Shutterbug</h4>
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
+                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
                     </div>
-                </div> <!-- end folio-item -->
+                </div>
 
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-yellowwall.jpg"
@@ -290,17 +339,17 @@
                                 <h3 class="folio-title">Yellow Wall</h3>
                             </div>
                         </a>
-                        <a href="https://www.behance.net/" class='details-link' title="details">
+                        <a href="#" class='details-link' title="details">
                             <i class="icon-link"></i>
                         </a>
-                    </div> <!-- end item-wrap -->
+                    </div>
 
                     <div id="02" class='hide'>
                         <h4>Yellow Wall</h4>
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
+                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
                     </div>
-                </div> <!-- end folio-item -->
+                </div>
 
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-architecture.jpg"
@@ -314,17 +363,17 @@
                                 <h3 class="folio-title">Architecture</h3>
                             </div>
                         </a>
-                        <a href="https://www.behance.net/" class='details-link' title="details">
+                        <a href="#" class='details-link' title="details">
                             <i class="icon-link"></i>
                         </a>
-                    </div> <!-- end item-wrap -->
+                    </div>
 
                     <div id="03" class='hide'>
                         <h4>Architecture</h4>
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
+                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
                     </div>
-                </div> <!-- end folio-item -->
+                </div>
 
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-minimalismo.jpg"
@@ -338,17 +387,18 @@
                                 <h3 class="folio-title">Minimalismo</h3>
                             </div>
                         </a>
-                        <a href="https://www.behance.net/" class='details-link' title="details">
+                        <a href="#" class='details-link' title="details">
                             <i class="icon-link"></i>
                         </a>
-                    </div> <!-- end item-wrap -->
+                    </div>
 
                     <div id="04" class='hide'>
                         <h4>Minimalismo</h4>
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
+                            nulla voluptate fugiat velit.
+                        </p>
                     </div>
-                </div> <!-- end folio-item -->
+                </div>
 
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-skaterboy.jpg"
@@ -362,17 +412,17 @@
                                 <h3 class="folio-title">Skaterboy</h3>
                             </div>
                         </a>
-                        <a href="https://www.behance.net/" class='details-link' title="details">
+                        <a href="#" class='details-link' title="details">
                             <i class="icon-link"></i>
                         </a>
-                    </div> <!-- end item-wrap -->
+                    </div>
 
                     <div id="05" class='hide'>
                         <h4>Skaterboy</h4>
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="https://www.behance.net/">Details</a></p>
+                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
                     </div>
-                </div> <!-- end folio-item -->
+                </div>
 
                 <div class="brick folio-item">
                     <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-salad.jpg"
@@ -386,15 +436,15 @@
                                 <h3 class="folio-title">Salad</h3>
                             </div>
                         </a>
-                        <a href="https://www.behance.net/" class='details-link' title="details">
+                        <a href="#" class='details-link' title="details">
                             <i class="icon-link"></i>
                         </a>
-                    </div> <!-- end item-wrap -->
+                    </div>
 
                     <div id="06" class='hide'>
                         <h4>Salad</h4>
                         <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="www.behance.net">Details</a></p>
+                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
                     </div>
                 </div>
 
@@ -433,7 +483,7 @@
                             <span class="position">CEO, Apple.</span>
                         </div>
                     </div>
-                </li> <!-- end slide -->
+                </li>
 
                 <li>
                     <p>
@@ -496,7 +546,7 @@
                 id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
                 sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
         </div>
-    </div> <!-- end section-intro -->
+    </div>
 
     <div class="row contact-content">
 
@@ -565,7 +615,7 @@
                     Mountain View, CA<br>
                     94043 US
                 </p>
-            </div> <!-- end cinfo -->
+            </div>
 
             <div class="cinfo">
                 <h6>Email Us At</h6>
@@ -573,7 +623,7 @@
                     someone@infinitysite.com<br>
                     info@infinitysite.com
                 </p>
-            </div> <!-- end cinfo -->
+            </div>
 
             <div class="cinfo">
                 <h6>Call Us At</h6>
