--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -476,34 +476,38 @@
             <div class="intro">
                 <h3 class="animate-this">About US</h3>
 
-                <p class="lead animate-this"><span>Trademark "HORT"</span>
-                    , founded by the German company M-Tech Autoteile GmbH, appeared on the market of
+                <p class="lead animate-this"><span>Trademark HORT</span>, founded by the German company
+                    M-Tech Autoteile GmbH, appeared on the market of
                     auto components in 2009, introducing cooling pumps for passenger cars.
-
-                    At present TM "HORT" offers to motorists and service specialists a significant list of spare parts,
-                    which include:
-
-                    Shock absorbers
-                    Clutch elements
-                    Brake pads and cylinders
-                    Thermostats
-                    Cooling pumps
-                    Starters
-                    Generators
-                    High-voltage wires
-                    Timing belts
-                    Drive belts
-                    Gas stops
-                    Constantly done painstaking work to expand the range of products
-                    TM "HORT" in the production of products uses the latest automated control systems for quality
+                    At present <span>TM HORT</span> offers to motorists and service specialists a significant list of
+                    spare parts,
+                    which include:</p>
+                <ul>
+                    <li>Shock absorbers</li>
+                    <li>Clutch elements</li>
+                    <li>Brake pads and cylinders</li>
+                    <li>Thermostats</li>
+                    <li>Cooling pumps</li>
+                    <li>Starters</li>
+                    <li>Generators</li>
+                    <li>High-voltage wires</li>
+                    <li>Timing belts</li>
+                    <li>Drive belts</li>
+                    <li>Gas stops</li>
+                    <li>Constantly done painstaking work to expand the range of products</li>
+                </ul>
+                <p class="lead animate-this">
+                    <span>TM HORT</span> in the production of products uses the latest automated control systems for
+                    quality
                     control and shipment of products in accordance with the requirements of ISO / TS 16949, which allows
                     you to track all the stages of planning, preparation and operation of production, tooling, finished
                     products.
-
-                    This approach makes it possible to ensure the quality of TM "HORT" products and assume warranty
+                    <br>
+                    This approach makes it possible to ensure the quality of <span>TM HORT</span> products and assume
+                    warranty
                     obligations to the consumer for at least 12 months of their operation.
-
-                    TM "HORT" makes maximum efforts to promote quality auto components to the secondary market.
+                    <span>TM HORT</span> makes maximum efforts to promote quality auto components to the secondary
+                    market.
                 </p>
             </div>
 
